<resources>
    <string name="app_name">FireChatbot</string>
    <string name="welcome_msg">Welcome!</string>
    <string name="sign_out">Sign Out</string>
    <string name="contacts_permission_rationale">Access to account information is required to sign in.</string>
    <string name="invite_menu_label">Invite</string>
    <string name="invitation_message">Please join me for a chat</string>
    <string name="invitation_cta">Call to action</string>
    <string name="invitation_title">FireChat Invite</string>
    <string name="sign_in">FireChatbot</string>
    <string name="sign_up">Sign Up</string>
    <string name="fresh_config">Fresh Config</string>
    <string name="cause_crash">Cause Crash</string>
    <string name="banner_ad_unit_id" translatable="false">ca-app-pub-3940256099942544/6300978111</string>

    <string name="facebook_application_id" translatable="false">122041745176122</string>
    <!-- Facebook Application ID, prefixed by 'fb'.  Enables Chrome Custom tabs. -->
    <string name="facebook_login_protocol_scheme" translatable="false">fb122041745176122</string>
    <string name="facebook_client_token" translatable="false">fbbd436c319806445eb025b99cf4637c</string>
    <string name="login_with_phone">Login</string>
    <string name="google_sign_up">Google_sign_up</string>
    <string name="sign_in_cancelled">Sign In Cancelled</string>
    <string name="no_internet_connection">No Internet Connection</string>
    <string name="unknown_error">Error !</string>
    <string name="unknown_sign_in_response">Error Response</string>
    <string name="delete_msg">Delete</string>
    <string name="title_activity_navigation_drawer">NavigationDrawerActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="no_internet_connection_image">No Internet ImageView</string>
    <string name="empty_view_title_text">Connection Issue</string>
    <string name="empty_view_subtitle_text">Oops ! chat room is not available</string>
    <string name="chat_image_view">chat image view</string>
    <string name="chat_text_view">chat text view</string>
    <string name="image_button_send">ImageButtonSend</string>
    <string name="chat_edit_text">Say Something ……</string>
    <string name="sent_message_image">Message_Image</string>
    <string name="item_image_view">Item Image View</string>
    <string name="nav_home">Home</string>
    <string name="sign_out_nav">Sign Out</string>
    <string name="invite_nav_menu">Invite</string>
    <string name="navigation_header">Navigation Header</string>

    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>
    <string name="collapsing_image">Collapsing Image</string>
</resources>
