<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/fire_chat_layout"
    android:layout_width="match_parent"
    android:layout_gravity="center"
    android:orientation="vertical"
    android:layout_height="match_parent">

    <RelativeLayout
        android:id="@+id/no_internet_empty_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:padding="16dp">

        <ImageView
            android:id="@+id/no_internet_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:contentDescription="@string/no_internet_connection_image"
            android:foregroundGravity="center"
            android:src="@mipmap/ic_no_internet" />


        <TextView
            android:id="@+id/empty_title_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/no_internet_image"
            android:layout_centerHorizontal="true"
            android:fontFamily="sans-serif-medium"
            android:paddingTop="16dp"
            android:text="@string/empty_view_title_text"
            android:textAppearance="?android:textAppearanceMedium" />

        <TextView
            android:id="@+id/empty_subtitle_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/empty_title_text"
            android:layout_centerHorizontal="true"
            android:fontFamily="sans-serif"
            android:paddingTop="8dp"
            android:text="@string/empty_view_subtitle_text"
            android:textAppearance="?android:textAppearanceSmall"
            android:textColor="#A2AAB0" />
    </RelativeLayout>
    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/chat_linear_shape"
        android:descendantFocusability="beforeDescendants"
        android:focusable="true"
        android:elevation="4dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:focusableInTouchMode="true"
        android:orientation="horizontal"
        android:padding="8dp">

        <ImageView
            android:id="@+id/addMessageImageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:contentDescription="@string/chat_image_view"
            android:padding="2dp"
            android:src="@drawable/ic_image_button" />

        <EditText
            android:id="@+id/messageEditText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:textAlignment="gravity"
            android:background="@android:color/transparent"
            android:focusableInTouchMode="true"
            android:hint="@string/chat_edit_text"
            android:inputType="textLongMessage"
            tools:ignore="LabelFor" />

        <ImageButton
            android:id="@+id/sendButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@drawable/button_circular_shape"
            android:contentDescription="@string/image_button_send"
            android:enabled="false"
            android:padding="2dp"
            android:src="@drawable/button_selector" />

    </LinearLayout>

</RelativeLayout>